2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesTest.cs: Unit tests (Lukasz Knop, 
	GSoC 2007)
	* CallingEqualsWithNullArgTest.cs: Unit tests (Nidhi Rawal, GSoC 2007)
	* FloatComparisonRuleTest.cs: Unit tests (Lukasz Knop, GSoC 2007)
	* UseValueInPropertySetterTest.cs: Unit tests (Lukasz Knop, GSoC 2007)
	* Test.Rules.Correctness.mdp: Update project files.

2007-02-27  Jb Evain  <jbevain@gmail.com>

	* MethodCanBeMadeStaticTest.cs:
		Add tests for rule MethodCanBeMadeStatic.

2006-10-16  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationTest.cs: Modify existing test case to make 
	sure parameter names aren't required to match in a recursive call
	(e.g. calling base class).

2006-09-28  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Adjust EXTRA_DIST to include project files in tarballs.

2006-09-20  Jonathan Chambers  <joncham@gmail.com>

	* Test.Rules.Correctness.csproj: Make reference to nunit.framework
	not a specific version for portability.
	
2006-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Correctness.mdp: New. Project file for MonoDevelop.
	* BadRecursiveInvocationTest.cs: Convert (and add) tests to NUnit format.